# semantic_localisation

aruco_detection/: CMakeLists.txt  package.xml
aruco_detection/msg/: Aruco.msg
aruco_detection/src/: Multiple_Aruco.py  opencv_ros_ArUco.py
pillar_detector/: CMakeLists.txt  package.xml
pillar_detector/action/: PillarDetector.action
pillar_detector/include/pillar_detector/: pillar_detector.h
pillar_detector/src/: pillar_detector_code.cpp  pillar_detector_server.cpp  pillar_detector_test.cpp
pillar_detector/src/backup/: circleransac.cpp  circleransac.h  detector.cpp
pillar_detector/src/backup/old/: circleransac.cpp  circleransac.h  detector.cpp
ropod_semantic_localization/: CMakeLists.txt  package.xml
ropod_semantic_localization/action/: Localization.action
ropod_semantic_localization/include/ropod_semantic_localization/: localization.h
ropod_semantic_localization/launch/: .start.launch.kate-swp  osm_bridge_eindhoven.launch  osm_bridge_germany.launch  rosbagtest.launch  start.launch
ropod_semantic_localization/launch/tools/: rviz.launch
ropod_semantic_localization/parameters/tools/: Semantic_Localization.rviz  rosbag_test.rviz  rviz_config.rviz
ropod_semantic_localization/simulation/: gazebo_simulator.launch  gazebo_simulator2.launch
ropod_semantic_localization/simulation/OSM/: Gemini_zuid.osm.bz2
ropod_semantic_localization/simulation/floorplan/: Gemini_zuid.pgm  Gemini_zuid.stl  Gemini_zuid.urdf  my-ed-config.yaml
ropod_semantic_localization/simulation/models/: model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-0/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-0/meshes/: 5x5_1000-0.dae
ropod_semantic_localization/simulation/models/5x5_1000-1/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-1/meshes/: 5x5_1000-1.dae
ropod_semantic_localization/simulation/models/5x5_1000-10/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-10/meshes/: 5x5_1000-10.dae
ropod_semantic_localization/simulation/models/5x5_1000-147/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-147/meshes/: 5x5_1000-147.dae
ropod_semantic_localization/simulation/models/5x5_1000-2/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-2/meshes/: 5x5_1000-2.dae
ropod_semantic_localization/simulation/models/5x5_1000-222/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-222/meshes/: 5x5_1000-222.dae
ropod_semantic_localization/simulation/models/5x5_1000-247/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-247/meshes/: 5x5_1000-247.dae
ropod_semantic_localization/simulation/models/5x5_1000-28/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-289/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-3/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-303/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-319/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-338/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-353/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-360/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-38/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-406/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-438/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/5x5_1000-445/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/check-108-1/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/check-108-1-scaled/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
ropod_semantic_localization/simulation/models/door_blue/: model.config  model.sdf
ropod_semantic_localization/simulation/models/door_green/: model.config  model.sdf
ropod_semantic_localization/simulation/models/door_red/: model.config  model.sdf
ropod_semantic_localization/simulation/models/door_yellow/: model.config  model.sdf
ropod_semantic_localization/simulation/models/kinect_ros/: model.config
ropod_semantic_localization/simulation/models/pillar/: model.sdf  pillar.sdf
ropod_semantic_localization/simulation/models/ropod_camera/: ropod_camera.sdf
ropod_semantic_localization/simulation/models/ropod_camera_tilt/: model.config  ropod_camera.sdf
ropod_semantic_localization/simulation/world/: ropod.world  ropod_mobidik.world  ropod_pillarswag.world
ropod_semantic_localization/src/: localization.cpp  localization_code.cpp  localization_plan.txt  localization_plan2.txt  motion_plan.txt  motion_plan2.txt  planner.cpp  querying.cpp  tf_broadcaster_localization.cpp  visualization.cpp
wall_detector/: CMakeLists.txt  package.xml
wall_detector/action/: WallDetector.action
wall_detector/include/wall_detector/: wall_detector.h
wall_detector/src/: wall_detector_code.cpp  wall_detector_server.cpp  wall_detector_test.cpp
(+14 files in other folders)
